--- a/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
@@ -230,7 +230,7 @@
 
                             if (gratisMensual.Count > 0)
                             {
-                                <label>@Herramientas.Idiomas.CogerCadena(idioma, "Month." + i.ToString())</label>
+                                <label>@Herramientas.Idiomas.CogerCadena(idioma, "Month." + i.ToString(), "Months")</label>
 
                                 <ul>
                                     @foreach (var juegoMensual in gratisMensual)
