--- a/pepeizqs deals web/Pages/Componentes/Secciones/Noticia.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Noticia.razor
@@ -26,7 +26,7 @@
 	</button>
 }
 
-<div style="padding: 0px; overflow-x: hidden; overflow-y: scroll;">
+<div style="padding: 0px; overflow-x: hidden; overflow-y: auto;">
 	@if (juegos != null)
 	{
 		if (juegos.Count > 0)
