--- a/pepeizqs deals web/Pages/Componentes/Secciones/Suscripciones.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Suscripciones.razor
@@ -203,7 +203,7 @@
 
                             if (suscripcionesMensual.Count > 0)
                             {
-                                <label>@Herramientas.Idiomas.CogerCadena(idioma, "Month." + i.ToString())</label>
+                                <label>@Herramientas.Idiomas.CogerCadena(idioma, "Month." + i.ToString(), "Months")</label>
 
                                 <ul>
                                     @foreach (var juegoMensual in suscripcionesMensual)
