--- a/pepeizqs deals web/Pages/Componentes/Interfaz/ResultadoJuego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Interfaz/ResultadoJuego.razor
@@ -6,21 +6,43 @@
 @inject NavigationManager NavManager
 
 <style>
-	.minimo-fuente {
-		font-size: 17px;
+	.rjuego-titulo {
+		padding: 10px 20px;
 	}
 
-	.minimo-fuentefecha {
+	.rjuego-fecha {
 		font-size: 14px;
 	}
 
+	.rjuego-descuento {
+		font-size: 16px;
+		padding: 10px 15px;
+		min-width: 65px;
+	}
+
+	.rjuego-precio {
+		font-size: 18px;
+		min-width: 110px;
+	}
+
 	@@media (max-width: 800px) {
-		.minimo-fuente {
-			font-size: 12px;
+		.rjuego-titulo {
+			padding: 5px 10px;
 		}
 
-		.minimo-fuentefecha {
+		.rjuego-fecha {
 			font-size: 10px;
+		}
+
+		.rjuego-descuento {
+			font-size: 12px;
+			padding: 5px 8px;
+			min-width: 35px;
+		}
+
+		.rjuego-precio {
+			font-size: 12px;
+			min-width: 50px;
 		}
 	}
 
@@ -197,28 +219,28 @@
 				fondoColor = "background-color: var(--fondoBotonPequeño);";
 			}
 
-			<button @onclick="@(e => AbrirEnlace(e, enlace))" class="boton-expandir" style="cursor: pointer; border: 0px; padding: 0px; display: block; width: 100%; color: var(--colorTexto); @fondoColor; text-align: left;">
+			<button @onclick="@(e => AbrirEnlace(e, enlace))" class="boton-expandir" style="cursor: pointer; border: 0px; padding: 0px; display: block; width: 100%; color: var(--colorTexto); text-align: left; @fondoColor">
 				<div class="perfil-flexible-centrado">
 					<div style="max-width: 230px;">
 						<img src="@juego.Imagenes.Header_460x215" style="width: 100%; height: 100%;" />
 					</div>
 
-					<div style="width: 100%; display: flex; flex-flow: column wrap; padding: 10px 20px;">
+					<div class="rjuego-titulo" style="width: 100%; display: flex; flex-flow: column wrap;">
 						<div class="minimo-fuente">@juego.Nombre</div>
 
 						<div style="margin-top: 15px; display: flex; align-items: center;">
 							<img src="@JuegoDRM2.SacarImagen(juego.PrecioMinimosHistoricos[0].DRM)" style="width: 16px; height: 16px; margin-right: 10px;" alt="DRM" />
 							<img src="@iconoTienda" style="width: 16px; height: 16px; margin-right: 10px;" alt="Store" />
-							<div class="minimo-fuentefecha">@Herramientas.Calculadora.DiferenciaTiempo(juego.PrecioMinimosHistoricos[0].FechaDetectado, idioma)</div>
+							<div class="rjuego-fecha">@Herramientas.Calculadora.DiferenciaTiempo(juego.PrecioMinimosHistoricos[0].FechaDetectado, idioma)</div>
 						</div>
 					</div>
 
 					<div style="display: flex; align-items: center;">
-						<div style="text-align: center; padding: 10px 15px; margin: 0px; min-width: 65px; @fondoDescuento">
+						<div class="rjuego-descuento" style="text-align: center; margin: 0px; @fondoDescuento">
 							@descuento
 						</div>
 
-						<div style="padding: 5px 15px; min-width: 110px; text-align: center; font-size: 18px;">
+						<div class="rjuego-precio" style="padding: 5px 15px; text-align: center;">
 							@precio
 						</div>
 					</div>
