--- a/pepeizqs deals web/Pages/Componentes/Secciones/Bundles.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Bundles.razor
@@ -307,7 +307,10 @@
 
 		foreach (var juego in bundleSeleccionado.Juegos)
 		{
-			juego.Juego = BaseDatos.Juegos.Buscar.UnJuego(juego.JuegoId.ToString());		
+			if (string.IsNullOrEmpty(juego.JuegoId) == false)
+			{
+				juego.Juego = BaseDatos.Juegos.Buscar.UnJuego(juego.JuegoId);
+			}		
 		}
 
 		mostrarBundleSeleccionado = true;
