--- a/pepeizqs deals web/Pages/Index.cshtml
+++ b/pepeizqs deals web/Pages/Index.cshtml
@@ -2,6 +2,7 @@
 
 @using Microsoft.AspNetCore.Identity
 @using pepeizqs_deals_web.Areas.Identity.Data
+@using pepeizqs_deals_web.Pages.Componentes.Secciones
 
 @model IndexModel
 
@@ -65,5 +66,13 @@
 			idioma = Model.idioma,
 			usuarioId = usuario?.Id
 		}))
+
+		if (BaseDatos.Usuarios.Buscar.RolDios(usuario?.Id) == true)
+		{
+			@(await Html.RenderComponentAsync<Componentes.Secciones.PortadaNoticias>(RenderMode.Server, new
+			{
+				idioma = Model.idioma
+			}))
+		}
 	}
 }
