--- a/pepeizqs deals web/Pages/Componentes/Secciones/Noticia.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Noticia.razor
@@ -4,12 +4,11 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using Noticias
-@using Suscripciones2
 @using pepeizqs_deals_web.Areas.Identity.Data
+@using Suscripciones2
 
 @inject UserManager<Usuario> UserManager
 @inject IJSRuntime JavaScript
-@inject NavigationManager NavManager
 
 <script>
 	window.ChangeUrl = function (url) {
@@ -21,20 +20,23 @@
 {
 	<Seo idioma="@idioma" titulo="@titulo" enlace="@enlace" descripcion="@Herramientas.Idiomas.CogerCadena(idioma, "SEO", "News")" video="@video" />
 
-	<button style="color: var(--colorTextoVisitado); background-color: var(--fondoBotonPequeño); border: 0px; padding: 8px 15px; margin-bottom: 40px;" @onclick="(e => VolverNoticias(e))">
-		@Herramientas.Idiomas.CogerCadena(idioma, "Back", "News")
-	</button>
+	<div style="display: flex; align-items: center; gap: 30px; margin-bottom: 40px;">
+		<a href="/last-news" class="boton-pequeño" style="color: var(--colorTextoVisitado); background-color: var(--fondoBotonPequeño); border: 0px; padding: 12px 20px; text-decoration: none; width: auto;">
+			@Herramientas.Idiomas.CogerCadena(idioma, "Back", "News")
+		</a>
+
+		<a href="/" class="boton-pequeño" style="color: var(--colorTextoVisitado); background-color: var(--fondoBotonPequeño); border: 0px; padding: 12px 20px; text-decoration: none; width: auto;">
+			@Herramientas.Idiomas.CogerCadena(idioma, "Back2", "News")
+		</a>
+	</div>
 }
 
 <div style="padding: 0px; overflow-x: hidden; overflow-y: auto;">
-	@if (juegos != null)
+	@if (string.IsNullOrEmpty(imagenDestacada) == false)
 	{
-		if (juegos.Count > 0)
-		{
-			<div style="display: flex; justify-content: center; align-items: center; overflow: hidden;">
-				<img style="height: 150px; flex-shrink: 0; min-width: 100%; object-fit: cover;" src="@juegos[0].Imagenes.Library_1920x620" alt="@juegos[0].Nombre" />
-			</div>
-		}
+		<div style="display: flex; justify-content: center; align-items: center; overflow: hidden;">
+			<img style="height: 170px; flex-shrink: 0; min-width: 100%; object-fit: cover;" src="@imagenDestacada" alt="Image" />
+		</div>
 	}
 
 	@if (tipo != Tipo.Portada)
@@ -69,33 +71,55 @@
 					@titulo
 				</h1>
 
-				<div style="display: flex; font-size: 14px; margin-top: 20px;">
+				<div style="display: flex; align-items: center; font-size: 15px; margin-top: 20px; gap: 30px;">
 					<div>@Herramientas.Idiomas.CogerCadena(idioma, "News.String6") @Herramientas.Calculadora.DiferenciaTiempo(noticia.FechaEmpieza, idioma)</div>
 
 					@{
 						string fechaTermina = string.Empty;
 						TimeSpan diferenciaTiempo = noticia.FechaTermina.Subtract(DateTime.Now);
 
-						if (diferenciaTiempo.Days > 1)
+						if (noticia.Tipo == NoticiaTipo.Bundles)
 						{
-							fechaTermina = string.Format(Herramientas.Idiomas.CogerCadena(idioma, "News.String1"), diferenciaTiempo.Days);
+							if (diferenciaTiempo.Days > 1)
+							{
+								fechaTermina = string.Format(Herramientas.Idiomas.CogerCadena(idioma, "String5", "News"), diferenciaTiempo.Days);
+							}
+							else if (diferenciaTiempo.Days == 1)
+							{
+								fechaTermina = string.Format(Herramientas.Idiomas.CogerCadena(idioma, "String6", "News"), diferenciaTiempo.Days);
+							}
+							else if (diferenciaTiempo.Days == 0)
+							{
+								fechaTermina = string.Format(Herramientas.Idiomas.CogerCadena(idioma, "String7", "News"), diferenciaTiempo.Days);
+							}
+							else if (diferenciaTiempo.Days < 0)
+							{
+								fechaTermina = string.Format(Herramientas.Idiomas.CogerCadena(idioma, "String8", "News"), diferenciaTiempo.Days);
+							}
 						}
-						else if (diferenciaTiempo.Days == 1)
+						else
 						{
-							fechaTermina = string.Format(Herramientas.Idiomas.CogerCadena(idioma, "News.String2"), diferenciaTiempo.Days);
-						}
-						else if (diferenciaTiempo.Days == 0)
-						{
-							fechaTermina = string.Format(Herramientas.Idiomas.CogerCadena(idioma, "News.String3"), diferenciaTiempo.Days);
-						}
-						else if (diferenciaTiempo.Days < 0)
-						{
-							fechaTermina = string.Format(Herramientas.Idiomas.CogerCadena(idioma, "News.String4"), diferenciaTiempo.Days);
+							if (diferenciaTiempo.Days > 1)
+							{
+								fechaTermina = string.Format(Herramientas.Idiomas.CogerCadena(idioma, "String1", "News"), diferenciaTiempo.Days);
+							}
+							else if (diferenciaTiempo.Days == 1)
+							{
+								fechaTermina = string.Format(Herramientas.Idiomas.CogerCadena(idioma, "String2", "News"), diferenciaTiempo.Days);
+							}
+							else if (diferenciaTiempo.Days == 0)
+							{
+								fechaTermina = string.Format(Herramientas.Idiomas.CogerCadena(idioma, "String3", "News"), diferenciaTiempo.Days);
+							}
+							else if (diferenciaTiempo.Days < 0)
+							{
+								fechaTermina = string.Format(Herramientas.Idiomas.CogerCadena(idioma, "String4", "News"), diferenciaTiempo.Days);
+							}
 						}
 
 						if (string.IsNullOrEmpty(fechaTermina) == false)
 						{
-							<div style="margin-left: 30px;">
+							<div>
 								@fechaTermina
 							</div>
 						}
@@ -103,26 +127,6 @@
 				</div>
 			</div>
 		</div>
-	}
-	
-	@if (string.IsNullOrEmpty(noticia.Enlace) == false)
-	{
-		<a href="@noticia.Enlace" class="boton-pequeño" style="padding: 10px; text-align: center; font-size: 19px;" target="_blank">
-			<div>
-				@if (noticia.Tipo == NoticiaTipo.Bundles)
-				{
-					<label style="cursor: pointer;">@Herramientas.Idiomas.CogerCadena(idioma, "News.String7")</label>
-				}
-				else if (noticia.Tipo == NoticiaTipo.Gratis)
-				{
-					<label style="cursor: pointer;">@Herramientas.Idiomas.CogerCadena(idioma, "News.String8")</label>
-				}
-				else if (noticia.Tipo == NoticiaTipo.Suscripciones)
-				{
-					<label style="cursor: pointer;">@Herramientas.Idiomas.CogerCadena(idioma, "News.String9")</label>
-				}
-			</div>
-		</a>
 	}
 
 	@if (noticia.Tipo == NoticiaTipo.Bundles)
@@ -134,6 +138,127 @@
 			</div>
 		}
 	}
+	else if (noticia.Tipo == NoticiaTipo.Gratis)
+	{
+		string texto = Herramientas.Idiomas.MirarTexto(idioma, noticia.ContenidoEn, noticia.ContenidoEs);
+
+		if (string.IsNullOrEmpty(texto) == false)
+		{
+			if (texto.Contains("</div>") == true)
+			{
+				int int1 = texto.IndexOf("</div>");
+				texto = texto.Remove(int1, texto.Length - int1);
+
+				if (texto.Contains("<div") == true)
+				{
+					int int2 = texto.IndexOf(">");
+					texto = texto.Remove(0, int2 + 1);
+				}
+			}
+			else
+			{
+				if (texto.Contains("<") == true)
+				{
+					int int1 = texto.IndexOf("<");
+					texto = texto.Remove(int1, texto.Length - int1);
+				}
+			}
+		}
+
+		<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px;">
+			<div>
+				@texto
+			</div>
+
+			@if (string.IsNullOrEmpty(noticia.GratisIds) == false)
+			{
+				<div style="display: grid; grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; gap: 20px; margin-top: 30px;">
+					@{
+						List<string> ids = Herramientas.Listados.Generar(noticia.GratisIds);
+
+						if (ids.Count > 0)
+						{
+							foreach (var id in ids)
+							{
+								var gratis = BaseDatos.Gratis.Buscar.UnJuego(int.Parse(id), null);
+
+								<a href="@Herramientas.EnlaceAcortador.Generar(gratis.Enlace, gratis.Tipo)" class="boton-pequeño" style="padding: 2px;" target="_blank">
+									<div>
+										<img src="@gratis.Imagen" style="max-width: 100%; max-height: 100%;" alt="@gratis.Nombre" />
+									</div>
+								</a>
+							}
+						}
+					}
+				</div>
+			}
+		</div>
+	}
+	else if (noticia.Tipo == NoticiaTipo.Suscripciones)
+	{
+		string texto = Herramientas.Idiomas.MirarTexto(idioma, noticia.ContenidoEn, noticia.ContenidoEs);
+
+		if (string.IsNullOrEmpty(texto) == false)
+		{
+			if (texto.Contains("</div>") == true)
+			{
+				int int1 = texto.IndexOf("</div>");
+				texto = texto.Remove(int1, texto.Length - int1);
+
+				if (texto.Contains("<div") == true)
+				{
+					int int2 = texto.IndexOf(">");
+					texto = texto.Remove(0, int2 + 1);
+				}
+			}
+			else
+			{
+				if (texto.Contains("<") == true)
+				{
+					int int1 = texto.IndexOf("<");
+					texto = texto.Remove(int1, texto.Length - int1);
+				}
+			}
+		}
+
+		<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px;">
+			<div>
+				@texto
+			</div>
+
+			@if (string.IsNullOrEmpty(noticia.SuscripcionesIds) == false)
+			{
+				<div style="display: grid; grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; gap: 20px; margin-top: 30px;">
+					@{
+						List<string> ids = Herramientas.Listados.Generar(noticia.SuscripcionesIds);
+
+						if (ids.Count > 0)
+						{
+							foreach (var id in ids)
+							{
+								var suscripcion = BaseDatos.Suscripciones.Buscar.UnJuego(int.Parse(id), null);
+
+								if (suscripcion != null)
+								{
+									var juego = BaseDatos.Juegos.Buscar.UnJuego(suscripcion.JuegoId);
+
+									<a href="@Herramientas.EnlaceAcortador.Generar(suscripcion.Enlace, suscripcion.Tipo)" class="boton-pequeño" style="padding: 2px;" target="_blank">
+										<div>
+											<img src="@juego.Imagenes.Library_600x900" style="max-width: 100%; max-height: 100%;" alt="@juego.Nombre" />
+										</div>
+
+										<div style="display: flex; align-items: center; justify-content: right; height: 40px;">
+											<img src="@Juegos.JuegoDRM2.SacarImagen(suscripcion.DRM)" style="max-width: 24px; max-height: 24px; margin: 10px;" alt="DRM" />
+										</div>
+									</a>
+								}
+							}
+						}
+					}
+				</div>
+			}
+		</div>
+	}
 	else
 	{
 		<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px;">
@@ -141,57 +266,32 @@
 		</div>
 	}
 
-	@if (string.IsNullOrEmpty(video) == false)
+	@if (noticiaAnterior != null || noticiaPosterior != null)
 	{
-		<div style="display: flex; height: 100%;">
-			<video controls autoplay muted src="@video" style="width: 100%; height: auto;" />
+		<div style="display: flex; align-items: center; gap: 40px; margin-top: 40px;">
+			@if (noticiaAnterior != null)
+			{
+				if (noticiaAnterior.Id > 0)
+				{
+					<a href="/news/@noticiaAnterior.Id/@Herramientas.EnlaceAdaptador.Nombre(Herramientas.Idiomas.MirarTexto(idioma, noticiaAnterior.TituloEn, noticiaAnterior.TituloEs))/" class="boton-pequeño" style="color: var(--colorTextoVisitado); background-color: var(--fondoBotonPequeño); border: 0px; padding: 12px 20px; text-decoration: none; width: 50%; display: flex; align-items: center; gap: 15px;">
+						<i class="fa-solid fa-arrow-left"></i>
+						@Herramientas.Idiomas.MirarTexto(idioma, noticiaAnterior.TituloEn, noticiaAnterior.TituloEs)
+					</a>
+				}
+			}
+
+			@if (noticiaPosterior != null)
+			{
+				if (noticiaPosterior.Id > 0)
+				{
+					<a href="/news/@noticiaPosterior.Id/@Herramientas.EnlaceAdaptador.Nombre(Herramientas.Idiomas.MirarTexto(idioma, noticiaPosterior.TituloEn, noticiaPosterior.TituloEs))/" class="boton-pequeño" style="color: var(--colorTextoVisitado); background-color: var(--fondoBotonPequeño); border: 0px; padding: 12px 20px; text-decoration: none; width: 50%; display: flex; align-items: center; gap: 15px; justify-content: flex-end;">
+						@Herramientas.Idiomas.MirarTexto(idioma, noticiaPosterior.TituloEn, noticiaPosterior.TituloEs)
+						<i class="fa-solid fa-arrow-right"></i>
+					</a>
+				}
+			}
 		</div>
 	}
-
-
-	@* 		@if (Model.juegos.Count > 0)
-	{
-	<div class="perfil" style="margin-top: 40px;">
-	<div style="margin-bottom: 20px;">
-	@Herramientas.Idiomas.CogerCadena(Model.idioma, "News.String5")
-	</div>
-
-	<div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 15px;">
-	@foreach (var juego in Model.juegos)
-	{
-	<div style="min-width: 150px; max-width: 200px;">
-	<a href="game/@juego.Id" class="boton-pequeño" style="padding: 5px;">
-	<div>
-	<img src="@await Herramientas.Imagenes.DescargarYGuardar(juego.Imagenes.Library_600x900, "juegos", juego.Id.ToString(), "library_600x900", HttpContext.Request.Host.Value)" style="max-width: 100%; max-height: 100%;" onerror="this.onerror=null;this.src='@juego.Imagenes.Capsule_231x87';" />
-	</div>
-	</a>
-	</div>
-	}
-	</div>
-	</div>
-	} *@
-
-	@* 		@if (Model.dlcs.Count > 0)
-	{
-	<div class="perfil" style="margin-top: 40px;">
-	<div style="margin-bottom: 20px;">
-	@Herramientas.Idiomas.CogerCadena(Model.idioma, "News.String10")
-	</div>
-
-	<div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 15px;">
-	@foreach (var juego in Model.dlcs)
-	{
-	<div style="min-width: 200px; max-width: 250px;">
-	<a href="game/@juego.Id" class="boton-pequeño" style="padding: 5px;">
-	<div>
-	<img src="@await Herramientas.Imagenes.DescargarYGuardar(juego.Imagenes.Capsule_231x87, "juegos", juego.Id.ToString(), "capsule_231x87", HttpContext.Request.Host.Value)" style="max-width: 100%; max-height: 100%;" />
-	</div>
-	</a>
-	</div>
-	}
-	</div>
-	</div>
-	} *@
 </div>
 
 @code {
@@ -215,11 +315,14 @@
 	[Parameter]
 	public Tipo tipo { get; set; } = Tipo.UltimasNoticias;
 
-	public Noticias.Noticia noticia = new Noticias.Noticia();
+	private Noticias.Noticia noticia = new Noticias.Noticia();
+	private Noticias.Noticia noticiaAnterior = null;
+	private Noticias.Noticia noticiaPosterior = null;
 
 	private string titulo = string.Empty;
 	private string enlace = string.Empty;
 	private string video = string.Empty;
+	private string imagenDestacada = string.Empty;
 
 	private List<Juegos.Juego> juegos = new List<Juegos.Juego>();
 
@@ -230,32 +333,59 @@
 		if (noticiaId > 0)
 		{
 			noticia = BaseDatos.Noticias.Buscar.UnaNoticia(noticiaId);
-		}
 
-		if (noticia != null)
-		{
-			titulo = Herramientas.Idiomas.MirarTexto(idioma, noticia.TituloEn, noticia.TituloEs);
-			enlace = "https://pepeizqdeals.com/news/" + noticiaId.ToString() + "/" + Herramientas.EnlaceAdaptador.Nombre(titulo) + "/";
-
-			List<string> juegosTexto = Herramientas.Listados.Generar(noticia.Juegos);
-
-			if (juegosTexto != null)
+			if (noticia != null)
 			{
-				foreach (var juego in juegosTexto)
-				{
-					juegos.Add(BaseDatos.Juegos.Buscar.UnJuego(juego));
-				}
-			}
+				titulo = Herramientas.Idiomas.MirarTexto(idioma, noticia.TituloEn, noticia.TituloEs);
+				enlace = "https://pepeizqdeals.com/news/" + noticiaId.ToString() + "/" + Herramientas.EnlaceAdaptador.Nombre(titulo) + "/";
 
-			if (juegos != null)
-			{
-				if (juegos.Count == 1)
+				List<string> juegosTexto = Herramientas.Listados.Generar(noticia.Juegos);
+
+				if (juegosTexto != null)
 				{
-					if (juegos[0].Media.Video != null)
+					foreach (var juego in juegosTexto)
 					{
-						video = juegos[0].Media.Video;
+						juegos.Add(BaseDatos.Juegos.Buscar.UnJuego(juego));
 					}
 				}
+
+				if (juegos != null)
+				{
+					if (juegos.Count == 1)
+					{
+						if (juegos[0].Media.Video != null)
+						{
+							video = juegos[0].Media.Video;
+						}
+					}
+					else if (juegos.Count > 1)
+					{
+						int analisis = 0;
+
+						foreach (var juego in juegos)
+						{
+							if (juego.Analisis != null)
+							{
+								if (string.IsNullOrEmpty(juego.Analisis.Cantidad) == false)
+								{
+									string temp = juego.Analisis.Cantidad;
+									temp = temp.Replace(",", null);
+									int analisisJuego = int.Parse(temp);
+
+									if (analisisJuego > analisis)
+									{
+										analisis = analisisJuego;
+										imagenDestacada = juego.Imagenes.Library_1920x620;
+									}
+								}
+							}
+							
+						}
+					}
+				}
+
+				noticiaAnterior = BaseDatos.Noticias.Buscar.UnaNoticia(noticiaId - 1);
+				noticiaPosterior = BaseDatos.Noticias.Buscar.UnaNoticia(noticiaId + 1);
 			}
 		}
 	}
@@ -278,10 +408,5 @@
 	{
 		Portada,
 		UltimasNoticias
-	}
-
-	private void VolverNoticias(MouseEventArgs e)
-	{
-		NavManager.NavigateTo("/last-news", true);
 	}
 }
