--- a/pepeizqs deals web/Pages/Componentes/Secciones/UltimasNoticias.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/UltimasNoticias.razor
@@ -1,6 +1,16 @@
 ﻿@using Microsoft.AspNetCore.Components.Web;
 @using Microsoft.VisualBasic;
 
+<style>
+	.imagen-expandir {
+		transition: transform .2s;
+	}
+
+		.imagen-expandir:hover {
+			transform: scale(1.01);
+		}
+</style>
+
 @if (noticiasMostrar.Count > 0)
 {
 	<div style="background-color: var(--fondoCuerpo); position: sticky; position: -webkit-sticky; top: 70px; z-index: 1; margin: -10px; padding: 10px;">
@@ -18,7 +28,9 @@
 		{
 			<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px; display: flex; align-items: center; gap: 30px;">
 				<div style="width: 50%;">
-					<img src="@noticiaMostrar.Imagen" style="width: 100%; height: 100%; border: 1px solid var(--fondoBotonPequeño);" />
+					<a href="/news/@noticiaMostrar.Id/">
+						<img src="@noticiaMostrar.Imagen" class="imagen-expandir" style="width: 100%; height: 100%; border: 1px solid var(--fondoBotonPequeño);" />
+					</a>
 				</div>
 
 				<div style="width: 100%; display: flex; flex-direction: column; gap: 20px;">
@@ -34,44 +46,44 @@
 						@{
 							string texto = Herramientas.Idiomas.MirarTexto(idioma, noticiaMostrar.ContenidoEn, noticiaMostrar.ContenidoEs);
 
-							if (noticiaMostrar.Tipo == Noticias.NoticiaTipo.Bundles)
+							if (string.IsNullOrEmpty(texto) == false)
 							{
-								if (string.IsNullOrEmpty(texto) == false)
+								if (texto.Contains("</div>") == true)
 								{
-									if (texto.Contains("</div>") == true)
-									{
-										int int1 = texto.IndexOf("</div>");
-										texto = texto.Remove(int1, texto.Length - int1);
+									int int1 = texto.IndexOf("</div>");
+									texto = texto.Remove(int1, texto.Length - int1);
 
-										if (texto.Contains("<div") == true)
-										{
-											int int2 = texto.IndexOf(">");
-											texto = texto.Remove(0, int2 + 1);
-										}
-									}
-									else
+									if (texto.Contains("<div") == true)
 									{
-										if (texto.Contains("<") == true)
-										{
-											int int1 = texto.IndexOf("<");
-											texto = texto.Remove(int1, texto.Length - int1);
-										}
+										int int2 = texto.IndexOf(">");
+										texto = texto.Remove(0, int2 + 1);
 									}
 								}
+								else
+								{
+									if (texto.Contains("<") == true)
+									{
+										int int1 = texto.IndexOf("<");
+										texto = texto.Remove(int1, texto.Length - int1);
+									}
+								}
+							}
 
-								<div>
-									@texto
-								</div>
+							<div>
+								@texto
+							</div>
 
+							if (noticiaMostrar.Tipo == Noticias.NoticiaTipo.Bundles)
+							{
 								<a href="/news/@noticiaMostrar.Id/" class="boton-pequeño" style="width: auto; margin-top: 20px; padding: 10px 15px;">
 									@Herramientas.Idiomas.CogerCadena(idioma, "String2", "LastNews")
 								</a>
 							}
 							else
 							{
-								<div>
-									@((MarkupString)texto)
-								</div>
+								<a href="/news/@noticiaMostrar.Id/" class="boton-pequeño" style="width: auto; margin-top: 20px; padding: 10px 15px;">
+									@Herramientas.Idiomas.CogerCadena(idioma, "String3", "LastNews")
+								</a>
 							}
 						}
 					</div>
